--- a/app/src/main/res/layout/item_full_calendar_month.xml
+++ b/app/src/main/res/layout/item_full_calendar_month.xml
@@ -18,6 +18,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
             android:gravity="center"
+            android:textStyle="bold"
             android:paddingTop="2dp"
             android:paddingBottom="10dp"
             android:textColor="@color/calendar_background"
