--- a/app/src/main/res/layout/item_full_calendar_month_v2.xml
+++ b/app/src/main/res/layout/item_full_calendar_month_v2.xml
@@ -18,6 +18,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
             android:gravity="center"
+            android:textStyle="bold"
             android:paddingTop="2dp"
             android:paddingBottom="10dp"
             android:textColor="@color/calendar_background"
@@ -33,8 +34,10 @@
             android:id="@+id/layout_shift"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginStart="1dp"
             android:alpha="0.5"
             android:gravity="center"
             android:orientation="horizontal">
@@ -47,8 +50,8 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:text="A"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
                 android:textColor="@color/chip_appbar"
                 android:textSize="16sp" />
         </LinearLayout>
