--- a/app/src/main/res/layout/fragment_shift_schedule.xml
+++ b/app/src/main/res/layout/fragment_shift_schedule.xml
@@ -174,6 +174,7 @@
                             android:paddingEnd="16dp">
 
                             <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/dialog_staff_A"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_marginStart="16dp"
@@ -224,6 +225,7 @@
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/dialog_staff_B"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_marginStart="16dp"
@@ -274,6 +276,7 @@
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/dialog_staff_C"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_marginStart="16dp"
@@ -324,6 +327,7 @@
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/dialog_staff_D"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_marginStart="16dp"
@@ -374,6 +378,7 @@
                             </androidx.constraintlayout.widget.ConstraintLayout>
 
                             <androidx.constraintlayout.widget.ConstraintLayout
+                                android:id="@+id/dialog_staff_E"
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_marginStart="16dp"
